fix datepicker on mobile

--- a/scss/form-builder-form.scss
+++ b/scss/form-builder-form.scss
@@ -4,9 +4,6 @@ input[type="date"]:before {
   margin-right: 0.5em;
 }
 
-input[type="date"] {
-  width: 200px;
-}
 .validation-error {
   position: fixed;
   width: 100%;
