--- a/scss/react-date-picker.scss
+++ b/scss/react-date-picker.scss
@@ -3,3 +3,7 @@
 .react-datepicker-popper {
   z-index: 2000;
 }
+
+.react-datepicker-wrapper {
+  display: block !important;
+}
